--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@deepgram/sdk": "^4.1.1",
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
@@ -42,13 +43,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "cross-fetch": "^4.1.0",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.5.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "latest",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "microphone-stream": "^6.0.1",
     "next": "15.2.4",
     "next-themes": "latest",
+    "node-record-lpcm16": "^1.0.1",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
